--- a/database/pyproject.toml
+++ b/database/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "authlib>=1.6.6",
     "dotenv>=0.9.9",
-    "fastapi>=0.127.0",
+    "fastapi[standard]>=0.127.0",
     "httpx>=0.28.1",
     "joserfc>=1.6.0",
     "mkdocs>=1.6.1",
